tdf#128744 sw DOCX: unprotect change tracking with verification

Unprotect change tracking only by password verification
instead of 1) unprotecting without the password or 2) rejecting
the correct password.

I.e. now 1) clicking on Record changes icon of Track Changes
toolbar or Edit->Track Changes->Record asks for a password, and
2) Unprotect Record changes on Security page of
File->Properties... accepts the correct password with disabling
record changes.

Show also "Invalid password!" dialog disabling Record Changes
by its icon or menu option, like Properties... dialog window does,
if the password is invalid.

Note: Still allow to unprotect OpenDocument export of a
protected OOXML import document, because that doesn't contain
the original password info, only a dummy RedlinePassword.
(OpenDocument exports protect Track Changes with the simple
RedlineProtectionKey configuration setting, so it's not
possible to map the OOXML password info to OpenDocument without
extending this.)

Follow-up to commit d416250f4f1766e2d596ea3feef6a94b7adf29f4
"tdf#106843 DOCX: forbid disabling protected Record Changes".

See also commit bfd7730f4cf002a79dc9c02c23286850fee3f12a
"tdf#89383 DOCX import: fix permission for editing".

Change-Id: Iafcf4a6b551a7e8485d4311aee889c2522526d71